Bug 1552885 - Fix issues in the post-Sandstone skin including low contrast, visited links and small font size

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -43,7 +43,6 @@
 
 .spin-toggle {
   display: inline;
-  cursor: pointer;
 }
 
 .spin-toggle:hover {
@@ -182,6 +181,7 @@ a.activity-ref {
 
 .module .field .value {
   display: table-cell;
+  padding-right: 10px;
 }
 
 .module .field .value.wide {
@@ -192,12 +192,9 @@ a.activity-ref {
   width: 100%;
 }
 
-.module .field .value input {
+.module .field .value input[type="text"],
+.module .field .value input:not([type]) {
   width: 100%;
-}
-
-.module .field .value input[type="checkbox"] {
-  width: auto;
 }
 
 .module .field .value.short input {
@@ -333,10 +330,6 @@ input[type="number"] {
   color: var(--secondary-label-color);
 }
 
-#cc-latch {
-  cursor: pointer;
-}
-
 #cc-list {
   overflow-y: auto;
   clear: both;
@@ -370,10 +363,6 @@ input[type="number"] {
 
 #add-cc {
   width: 100%;
-}
-
-.cc-loadable {
-  cursor: pointer;
 }
 
 .cc-loadable:hover {
@@ -576,7 +565,6 @@ td.flag-requestee {
   opacity: 1;
   font-size: var(--font-size-small);
   text-align: center;
-  cursor: pointer;
   transition: all .2s 2s;
   will-change: transform; /* for performance */
 }
@@ -823,7 +811,6 @@ h3.change-name a {
 .change-set .attachment.deleted .label [itemprop="description"],
 .change-set .attachment.obsolete .label [itemprop="description"] {
   text-decoration: line-through;
-  text-decoration-color: var(--secondary-label-color);
 }
 
 .change-set .attachment .outer {
@@ -946,7 +933,6 @@ h3.change-name a {
   outline: 0;
   border-bottom: 4px solid transparent;
   padding: 4px 8px;
-  cursor: pointer;
 }
 
 #comment-tabs li[aria-selected="true"] {
@@ -998,6 +984,7 @@ h3.change-name a {
 #mode-container {
   display: table-cell;
   margin: 5px;
+  border-left: 5px solid transparent;
   padding: 5px;
   text-align: right;
   white-space: nowrap;
@@ -1084,7 +1071,6 @@ a.lightbox-icon.markdown {
   max-width: 90%;
   background-color: var(--secondary-region-background-color);
   box-shadow: var(--primary-region-box-shadow);
-  cursor: pointer;
 }
 
 #lb_overlay {
